refactor: Section과 Line을 외부에서 변경하지 못하도록 만든다